--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
   ],
   "homepage": "https://bitbucket.org/alldigitalrewards/industryprogramenum",
   "require": {
-    "php" : "^7.0"
+    "php" : "^7.0|^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit" : "~4.0||~5.0",
-    "squizlabs/php_codesniffer": "^2.3"
+    "phpunit/phpunit" : "~4.0|~5.0|^9.5",
+    "squizlabs/php_codesniffer": "^2.3|^3.6",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
